--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -6,6 +6,9 @@
             <div class="col">
             <h1>This is the homepage</h1>
             <p>This is the text</p>
+
+            <img src="/static/images/house.jpg" height="1300" width="2365" >
+
             </div>
         </div>
     </div>
