--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -11,26 +11,43 @@
             <div class="col">
 
               <h1>Make reservation</h1>
+          <p><strong>Reservation Details</strong></p>
+              
+              {{$res := index .Data "reservation"}}
 
-              <form class="needs-validation" action="" method="post" novalidate >
+              <form  action="/make-reservation" method="post" novalidate >
+              <input type="hidden" name="csrf_token" value="{{.CSRFToken}}"  >
+
                 <div class="form-group mt-5 ">
                   <label for="first_name">First name:</label>
-                  <input type="text" name="first_name" id="first_name" class="form-control" required autocomplete="off">
+                  {{with .Form.Errors.Get "first_name"}}
+                    <label class="text-danger">{{.}}</label>
+                  {{end}}
+                  <input type="text" value="{{$res.FirstName}}" name="first_name" id="first_name" class="form-control {{with .Form.Errors.Get "first_name" }} is-invalid {{end}}" required autocomplete="off">
                 </div>
 
                 <div class="form-group mt-1 ">
                   <label for="last_name">Last name:</label>
-                  <input type="text" name="last_name" id="last_name" class="form-control" required autocomplete="off">
+                  {{with .Form.Errors.Get "last_name"}}
+                    <label class="text-danger">{{.}}</label>
+                  {{end}}
+                  <input type="text" value="{{$res.LastName}}" name="last_name" id="last_name" class="form-control {{with .Form.Errors.Get "last_name" }} is-invalid {{end}}" required autocomplete="off">
                 </div>
 
                 <div class="form-group mt-1 ">
                   <label for="email">Email:</label>
-                  <input type="email" name="email" id="email" class="form-control" required autocomplete="off">
+                  {{with .Form.Errors.Get "email"}}
+                    <label class="text-danger">{{.}}</label>
+                  {{end}}
+                  <input type="email" value="{{$res.Email}}" name="email" id="email" class="form-control {{with .Form.Errors.Get "email" }} is-invalid {{end}}" required autocomplete="off">
                 </div>
 
                 <div class="form-group mt-1 ">
                   <label for="phone">Phone:</label>
-                  <input type="text" name="phone" id="phone" class="form-control" required autocomplete="off">
+                  {{with .Form.Errors.Get "phone"}}
+                    <label class="text-danger">{{.}}</label>
+                  {{end}}
+                  <input type="text" name="phone" value="{{$res.Phone}}" id="phone" class="form-control {{with .Form.Errors.Get "phone" }} is-invalid {{end}}" required autocomplete="off">
                 </div>
                  <hr>
 
